apps/services/mlops/chatbot-ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatui
  labels:
    app: chatui
spec:
  selector:
    matchLabels:
      app: chatui
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: chatui
      labels:
        app: chatui
    spec:
      containers:
      - name: chatbot-ui
        image: docker.io/ddiu8081/chatgpt-demo:latest
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
