apps/services/mlops/chatbot-ui/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatui
  labels:
    app: chatui
spec:
  selector:
    app: chatui
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: chatui-tailscale
  labels:
    app: chatui
  annotations:
    tailscale.com/hostname: "gpt"
spec:
  selector:
    app: chatui
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
